// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--list > prints all available tasks 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --list
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.config.ts

[log] <Bold>Greetings tasks</BoldDim>
[log] <Bold>---------------</BoldDim>
[log] <Bold><Green>goodbye</Green></BoldDim><Yellow> - Say goodbye to nadle!</Yellow>
[log] <Bold><Green>hello</Green></BoldDim><Yellow> - Say hello to nadle!</Yellow>
[log]
[log] <Bold>Utils tasks</BoldDim>
[log] <Bold>-----------</BoldDim>
[log] <Green>copy</Green>
[log]
[log] <Bold>Uncategorized tasks</BoldDim>
[log] <Bold>-------------------</BoldDim>
[log] <Green>prepare</Green>
[log] <Green>throwable</Green>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`--list > prints no task message when no registered tasks 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.empty.ts --list
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.empty.ts

[log] No tasks found
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;
